[package]
name = "pieceweight"
version = "0.1.0"
edition = "2021"
authors = ["Umair Parak <umairparak02@gmail.com>"]
description = "A command-line tool to calculate total weight and price for piece-by-piece sweets orders."
license = "MIT"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
serde_json = "1.0"
csv = "1.1"
chrono = "0.4"
